--- a/public/index.html
+++ b/public/index.html
@@ -129,6 +129,16 @@
                                                 <div class="link-text smaller">Casablanca</div>
                                              </a>
                                           </div>
+                                          <div role="listitem" class="parent-partner w-dyn-item">
+                                             <a href="/taghazout.html" class="link-block smaller customtrans image-partner w-inline-block">
+                                                <div class="link-text smaller">Taghazout</div>
+                                             </a>
+                                          </div>
+                                          <div role="listitem" class="parent-partner w-dyn-item">
+                                             <a href="/imsouane.html" class="link-block smaller customtrans image-partner w-inline-block">
+                                                <div class="link-text smaller">Imsouane</div>
+                                             </a>
+                                          </div>
                                        </div>
                                     </div>
                                  </div>
@@ -630,6 +640,46 @@
                               </div>
                               <div class="location-name-block">
                                  <h2 class="h2-slider">Agadir</h2>
+                                 <div class="button-pill dest-pill">
+                                    <div class="button-text">En savoir plus</div>
+                                 </div>
+                              </div>
+                           </div>
+                        </a>
+                     </div>
+                     <div role="listitem" class="location-slider-collection-item splide__slide w-dyn-item">
+                        <a data-w-id="8b1b89fa-a34b-8b6f-833f-811f0f17c3d5" style="background-image:url(&quot;/images/taghazout1_1920.webp&quot;)" href="/taghazout.html" class="location-slider-link-block customtrans w-inline-block">
+                           <img alt="Taghazout" loading="lazy" data-w-id="44307a4c-ee36-d72b-c1eb-c1826e5ff7e1" src="/images/taghazout1_1920.webp" srcset="/images/taghazout1_640.webp 640w,/images/taghazout1_1280.webp 1280w" class="bg-image-card">
+                           <div class="dark-gradient"></div>
+                           <div class="location-slider-content">
+                              <div class="types-entertainment home-slide">
+                                 <div class="category-block-slide margin-right trvael-mobile">
+                                    <div class="icon-wrap"><img src="/images/localisation.svg" loading="lazy" alt="icon" class="icon"></div>
+                                    <div class="category-text mobile-margin-top">le nord d'Agadir</div>
+                                 </div>
+                              </div>
+                              <div class="location-name-block">
+                                 <h2 class="h2-slider">Taghazout</h2>
+                                 <div class="button-pill dest-pill">
+                                    <div class="button-text">En savoir plus</div>
+                                 </div>
+                              </div>
+                           </div>
+                        </a>
+                     </div>
+                     <div role="listitem" class="location-slider-collection-item splide__slide w-dyn-item">
+                        <a data-w-id="8b1b89fa-a34b-8b6f-833f-811f0f17c3d5" style="background-image:url(&quot;/images/imsouane.webp&quot;)" href="/imsouane.html" class="location-slider-link-block customtrans w-inline-block">
+                           <img alt="Imsouane" loading="lazy" data-w-id="44307a4c-ee36-d72b-c1eb-c1826e5ff7e1" src="/images/imsouane.webp" srcset="/images/imsouane-500.webp 500w, /images/imsouane-800.webp 800w, /images/imsouane-1080.webp 1080w, /images/imsouane-1250.webp 1250w, /images/imsouane-1450.webp 1450w, /images/imsouane-1600.webp 1600w" class="bg-image-card">
+                           <div class="dark-gradient"></div>
+                           <div class="location-slider-content">
+                              <div class="types-entertainment home-slide">
+                                 <div class="category-block-slide margin-right trvael-mobile">
+                                    <div class="icon-wrap"><img src="/images/localisation.svg" loading="lazy" alt="icon" class="icon"></div>
+                                    <div class="category-text mobile-margin-top">70km au nord d'agadir</div>
+                                 </div>
+                              </div>
+                              <div class="location-name-block">
+                                 <h2 class="h2-slider">Imsouane</h2>
                                  <div class="button-pill dest-pill">
                                     <div class="button-text">En savoir plus</div>
                                  </div>
@@ -1216,6 +1266,8 @@
                         <div role="listitem" class="footer-cms-link w-dyn-item"><a href="/essaouira.html" class="footer-text-link footer-cms customtrans thicker">Essaouira</a></div>
                         <div role="listitem" class="footer-cms-link w-dyn-item"><a href="/agadir.html" class="footer-text-link footer-cms customtrans thicker">Agadir</a></div>
                         <div role="listitem" class="footer-cms-link w-dyn-item"><a href="/casablanca.html" class="footer-text-link footer-cms customtrans thicker">Casablanca</a></div>
+                        <div role="listitem" class="footer-cms-link w-dyn-item"><a href="/taghazout.html" class="footer-text-link footer-cms customtrans thicker">Taghazout</a></div>
+                           <div role="listitem" class="footer-cms-link w-dyn-item"><a href="/imsouane.html" class="footer-text-link footer-cms customtrans thicker">Imsouane</a></div>
                      </div>
                   </div>
                </div>
