--- a/public/destination.html
+++ b/public/destination.html
@@ -127,6 +127,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                                 <div class="link-text smaller">Casablanca</div>
                                              </a>
                                           </div>
+                                          <div role="listitem" class="parent-partner w-dyn-item">
+                                             <a href="/taghazout.html" class="link-block smaller customtrans image-partner w-inline-block">
+                                                <div class="link-text smaller">Taghazout</div>
+                                             </a>
+                                          </div>
+                                          <div role="listitem" class="parent-partner w-dyn-item">
+                                             <a href="/imsouane.html" class="link-block smaller customtrans image-partner w-inline-block">
+                                                <div class="link-text smaller">Imsouane</div>
+                                             </a>
+                                          </div>
                                        </div>
                                     </div>
                                  </div>
@@ -353,6 +363,42 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                            </div>
                         </a>
                      </div>
+                     <div role="listitem" class="destinations-item w-dyn-item">
+                        <a data-w-id="650f09f1-f8e0-ee4d-e364-405d542e3b4c" href="/taghazout.html" class="destination-card customtrans w-inline-block">
+                           <img data-w-id="64ff1ace-abb6-9680-1d88-2cb1f2d67cf1" loading="lazy" style="-webkit-transform:translate3d(0,0,0) scale3d(1,1,1) rotateX(0) rotateY(0) rotateZ(0) skew(0,0);-moz-transform:translate3d(0,0,0) scale3d(1,1,1) rotateX(0) rotateY(0) rotateZ(0) skew(0,0);-ms-transform:translate3d(0,0,0) scale3d(1,1,1) rotateX(0) rotateY(0) rotateZ(0) skew(0,0);transform:translate3d(0,0,0) scale3d(1,1,1) rotateX(0) rotateY(0) rotateZ(0) skew(0,0)" src="/images/taghazout1_1280.webp" srcset="/images/taghazout1_640.webp 640w,/images/taghazout1_1280.webp 1280w" alt="Taghazout" class="bg-image-card">
+                           <div class="dark-gradient"></div>
+                           <div class="div-block-4">
+                              <h2 class="h2 destinations-h2">Taghazout</h2>
+                              <div class="types-entertainment mobile-horizontal">
+                                 <div class="category-block-slide margin-right no-margin-bottom">
+                                    <div class="icon-wrap bigger"><img src="/images/localisation.svg" loading="lazy" alt="icon" class="icon bigger-icon"></div>
+                                    <div class="category-text">Le nord du maroc</div>
+                                 </div>
+                              </div>
+                           </div>
+                           <div class="button-pill destination-mobile">
+                              <div class="button-text">En savoir plus</div>
+                           </div>
+                        </a>
+                     </div>
+                     <div role="listitem" class="destinations-item w-dyn-item">
+                        <a data-w-id="650f09f1-f8e0-ee4d-e364-405d542e3b4c" href="/imsouane.html" class="destination-card customtrans w-inline-block">
+                           <img data-w-id="64ff1ace-abb6-9680-1d88-2cb1f2d67cf1" loading="lazy" style="-webkit-transform:translate3d(0,0,0) scale3d(1,1,1) rotateX(0) rotateY(0) rotateZ(0) skew(0,0);-moz-transform:translate3d(0,0,0) scale3d(1,1,1) rotateX(0) rotateY(0) rotateZ(0) skew(0,0);-ms-transform:translate3d(0,0,0) scale3d(1,1,1) rotateX(0) rotateY(0) rotateZ(0) skew(0,0);transform:translate3d(0,0,0) scale3d(1,1,1) rotateX(0) rotateY(0) rotateZ(0) skew(0,0)" src="/images/imsouane.webp" srcset="/images/imsouane-500.webp 500w, /images/imsouane-800.webp 800w, /images/imsouane-1080.webp 1080w, /images/imsouane-1250.webp 1250w, /images/imsouane-1450.webp 1450w, /images/imsouane-1600.webp 1600w" alt="Imsouane" class="bg-image-card">
+                           <div class="dark-gradient"></div>
+                           <div class="div-block-4">
+                              <h2 class="h2 destinations-h2">Imsouane</h2>
+                              <div class="types-entertainment mobile-horizontal">
+                                 <div class="category-block-slide margin-right no-margin-bottom">
+                                    <div class="icon-wrap bigger"><img src="/images/localisation.svg" loading="lazy" alt="icon" class="icon bigger-icon"></div>
+                                    <div class="category-text">70km au nord d'Agadir</div>
+                                 </div>
+                              </div>
+                           </div>
+                           <div class="button-pill destination-mobile">
+                              <div class="button-text">En savoir plus</div>
+                           </div>
+                        </a>
+                     </div>
                   </div>
                </div>
             </div>
@@ -378,6 +424,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                            <div role="listitem" class="footer-cms-link w-dyn-item"><a href="/essaouira.html" class="footer-text-link footer-cms customtrans thicker">Essaouira</a></div>
                            <div role="listitem" class="footer-cms-link w-dyn-item"><a href="/agadir.html" class="footer-text-link footer-cms customtrans thicker">Agadir</a></div>
                            <div role="listitem" class="footer-cms-link w-dyn-item"><a href="/casablanca.html" class="footer-text-link footer-cms customtrans thicker">Casablanca</a></div>
+                           <div role="listitem" class="footer-cms-link w-dyn-item"><a href="/taghazout.html" class="footer-text-link footer-cms customtrans thicker">Taghazout</a></div>
+                           <div role="listitem" class="footer-cms-link w-dyn-item"><a href="/imsouane.html" class="footer-text-link footer-cms customtrans thicker">Imsouane</a></div>
                         </div>
                      </div>
                   </div>
