--- a/public/agadir.html
+++ b/public/agadir.html
@@ -559,6 +559,7 @@
                                  </div>
                               </a>
                            </div>
+
                            <div role="listitem" class="trip-iten-item splide__slide w-dyn-item">
                               <a href="/casablanca.html" class="travel-type-link consider-link customtrans w-inline-block">
                                  <img src="/images/casablanca.webp" loading="lazy" alt="mosquée hassan 2" sizes="(max-width: 479px) 92vw, (max-width: 991px) 60vw, 49vw" srcset="/images/casablanca_500.webp 500w, /images/casablanca_800.webp 800w, /images/casablanca_1080.webp 1080w" class="image pop-ti">
@@ -573,6 +574,46 @@
                                  </div>
                                  <div class="consider-bot-wrapper on-hover-block">
                                     <p class="paragraph light consider-limit">Agadir,charme les visiteurs avec ses plages dorées, son climat clément et son atmosphère décontractée.Agadir est une destination prisée pour le farniente, les sports nautiques et la découverte d'une culture berbère authentique.</p>
+                                    <div class="button-pill inside-consider">
+                                       <div class="button-text">En savoir plus</div>
+                                    </div>
+                                 </div>
+                              </a>
+                           </div>
+                           <div role="listitem" class="trip-iten-item splide__slide w-dyn-item">
+                              <a href="/taghazout.html" class="travel-type-link consider-link customtrans w-inline-block">
+                                 <img src="/images/taghazout.webp" loading="lazy" alt="Taghazout" sizes="(max-width: 479px) 92vw, (max-width: 991px) 60vw, 49vw" srcset="/images/taghazout_500.webp 500w, /images/taghazout_800.webp 800w" class="image pop-ti">
+                                 <div class="dark-gradient"></div>
+                                 <div class="title-name-block consider-block">
+                                    <div class="trip-days">Taghazout Bay</div>
+                                    <h4 class="h4 white">Taghazout</h4>
+                                    <div class="icon-wrap-block trip-iten">
+                                       <div class="icon-wrap mobile-no-right"><img src="/images/localisation.svg" loading="lazy" alt="icon" class="icon"></div>
+                                       <div class="category-text">la côte au nord d'Agadir</div>
+                                    </div>
+                                 </div>
+                                 <div class="consider-bot-wrapper on-hover-block">
+                                    <p class="paragraph light consider-limit">Situé sur la côte atlantique marocaine, à environ 20 km au nord d'Agadir, Taghazout est un charmant village de pêcheurs devenu une destination prisée pour les amateurs de surf et les amoureux de la nature.</p>
+                                    <div class="button-pill inside-consider">
+                                       <div class="button-text">En savoir plus</div>
+                                    </div>
+                                 </div>
+                              </a>
+                           </div>
+                           <div role="listitem" class="trip-iten-item splide__slide w-dyn-item">
+                              <a href="/imsouane.html" class="travel-type-link consider-link customtrans w-inline-block">
+                                 <img src="/images/imsouane.webp" loading="lazy" alt="Imsouane" sizes="(max-width: 479px) 92vw, (max-width: 991px) 60vw, 49vw" srcset="/images/imsouane-500.webp 500w, /images/imsouane-800.webp 800w, /images/imsouane-1080.webp 1080w, /images/imsouane-1250.webp 1250w, /images/imsouane-1450.webp 1450w, /images/imsouane-1600.webp 600w" class="image pop-ti">
+                                 <div class="dark-gradient"></div>
+                                 <div class="title-name-block consider-block">
+                                    <div class="trip-days">Imsouane Bay</div>
+                                    <h4 class="h4 white">Imsouane</h4>
+                                    <div class="icon-wrap-block trip-iten">
+                                       <div class="icon-wrap mobile-no-right"><img src="/images/localisation.svg" loading="lazy" alt="icon" class="icon"></div>
+                                       <div class="category-text">70 km au nord d'Agadir</div>
+                                    </div>
+                                 </div>
+                                 <div class="consider-bot-wrapper on-hover-block">
+                                    <p class="paragraph light consider-limit">À mi-chemin entre Agadir et Essaouira, Imsouane offre une ambiance décontractée, idéale pour se détendre, profiter de la nature et découvrir l'authenticité marocaine.</p>
                                     <div class="button-pill inside-consider">
                                        <div class="button-text">En savoir plus</div>
                                     </div>
