--- a/public/contact.html
+++ b/public/contact.html
@@ -131,6 +131,16 @@
                                                 <div class="link-text smaller">Casablanca</div>
                                              </a>
                                           </div>
+                                          <div role="listitem" class="parent-partner w-dyn-item">
+                                             <a href="/taghazout.html" class="link-block smaller customtrans image-partner w-inline-block">
+                                                <div class="link-text smaller">Taghazout</div>
+                                             </a>
+                                          </div>
+                                          <div role="listitem" class="parent-partner w-dyn-item">
+                                             <a href="/imsouane.html" class="link-block smaller customtrans image-partner w-inline-block">
+                                                <div class="link-text smaller">Imsouane</div>
+                                             </a>
+                                          </div>
                                        </div>
                                     </div>
                                  </div>
@@ -566,6 +576,8 @@
                            <div role="listitem" class="footer-cms-link w-dyn-item"><a href="/essaouira.html" class="footer-text-link footer-cms customtrans thicker">Essaouira</a></div>
                            <div role="listitem" class="footer-cms-link w-dyn-item"><a href="/agadir.html" class="footer-text-link footer-cms customtrans thicker">Agadir</a></div>
                            <div role="listitem" class="footer-cms-link w-dyn-item"><a href="/casablanca.html" class="footer-text-link footer-cms customtrans thicker">Casablanca</a></div>
+                           <div role="listitem" class="footer-cms-link w-dyn-item"><a href="/taghazout.html" class="footer-text-link footer-cms customtrans thicker">Taghazout</a></div>
+                           <div role="listitem" class="footer-cms-link w-dyn-item"><a href="/imsouane.html" class="footer-text-link footer-cms customtrans thicker">Imsouane</a></div>
                         </div>
                      </div>
                   </div>
