--- a/public/essaouira.html
+++ b/public/essaouira.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-wf-page="614810e19a1f288229c2d988" data-wf-site="614810e19a1f28d23fc2d904" data-wf-status="1" lang="fr">
+<html data-wf-page="614810e19a1f288229c2d988" data-wf-site="614810e19a1f28d23fc2d904"  lang="fr">
    <head>
       <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -126,6 +126,16 @@
                                           <div role="listitem" class="parent-partner w-dyn-item">
                                              <a href="/casablanca.html" class="link-block smaller customtrans image-partner w-inline-block">
                                                 <div class="link-text smaller">Casablanca</div>
+                                             </a>
+                                          </div>
+                                          <div role="listitem" class="parent-partner w-dyn-item">
+                                             <a href="/taghazout.html" class="link-block smaller customtrans image-partner w-inline-block">
+                                                <div class="link-text smaller">Taghazout</div>
+                                             </a>
+                                          </div>
+                                          <div role="listitem" class="parent-partner w-dyn-item">
+                                             <a href="/imsouane.html" class="link-block smaller customtrans image-partner w-inline-block">
+                                                <div class="link-text smaller">Imsouane</div>
                                              </a>
                                           </div>
                                        </div>
@@ -587,6 +597,46 @@
                                  </div>
                               </a>
                            </div>
+                           <div role="listitem" class="trip-iten-item splide__slide w-dyn-item">
+                              <a href="/taghazout.html" class="travel-type-link consider-link customtrans w-inline-block">
+                                 <img src="/images/taghazout.webp" loading="lazy" alt="Taghazout" sizes="(max-width: 479px) 92vw, (max-width: 991px) 60vw, 49vw" srcset="/images/taghazout_500.webp 500w, /images/taghazout_800.webp 800w" class="image pop-ti">
+                                 <div class="dark-gradient"></div>
+                                 <div class="title-name-block consider-block">
+                                    <div class="trip-days">Taghazout Bay</div>
+                                    <h4 class="h4 white">Taghazout</h4>
+                                    <div class="icon-wrap-block trip-iten">
+                                       <div class="icon-wrap mobile-no-right"><img src="/images/localisation.svg" loading="lazy" alt="icon" class="icon"></div>
+                                       <div class="category-text">la côte au nord d'Agadir</div>
+                                    </div>
+                                 </div>
+                                 <div class="consider-bot-wrapper on-hover-block">
+                                    <p class="paragraph light consider-limit">Situé sur la côte atlantique marocaine, à environ 20 km au nord d'Agadir, Taghazout est un charmant village de pêcheurs devenu une destination prisée pour les amateurs de surf et les amoureux de la nature.</p>
+                                    <div class="button-pill inside-consider">
+                                       <div class="button-text">En savoir plus</div>
+                                    </div>
+                                 </div>
+                              </a>
+                           </div>
+                           <div role="listitem" class="trip-iten-item splide__slide w-dyn-item">
+                              <a href="/imsouane.html" class="travel-type-link consider-link customtrans w-inline-block">
+                                 <img src="/images/imsouane.webp" loading="lazy" alt="Imsouane" sizes="(max-width: 479px) 92vw, (max-width: 991px) 60vw, 49vw" srcset="/images/imsouane-500.webp 500w, /images/imsouane-800.webp 800w, /images/imsouane-1080.webp 1080w, /images/imsouane-1250.webp 1250w, /images/imsouane-1450.webp 1450w, /images/imsouane-1600.webp 600w" class="image pop-ti">
+                                 <div class="dark-gradient"></div>
+                                 <div class="title-name-block consider-block">
+                                    <div class="trip-days">Imsouane Bay</div>
+                                    <h4 class="h4 white">Imsouane</h4>
+                                    <div class="icon-wrap-block trip-iten">
+                                       <div class="icon-wrap mobile-no-right"><img src="/images/localisation.svg" loading="lazy" alt="icon" class="icon"></div>
+                                       <div class="category-text">70 km au nord d'Agadir</div>
+                                    </div>
+                                 </div>
+                                 <div class="consider-bot-wrapper on-hover-block">
+                                    <p class="paragraph light consider-limit">À mi-chemin entre Agadir et Essaouira, Imsouane offre une ambiance décontractée, idéale pour se détendre, profiter de la nature et découvrir l'authenticité marocaine.</p>
+                                    <div class="button-pill inside-consider">
+                                       <div class="button-text">En savoir plus</div>
+                                    </div>
+                                 </div>
+                              </a>
+                           </div>
                         </div>
                      </div>
                      <div class="slide-progress-bar">
@@ -617,6 +667,8 @@
                            <div role="listitem" class="footer-cms-link w-dyn-item"><a href="/essaouira.html" class="footer-text-link footer-cms customtrans thicker">Essaouira</a></div>
                            <div role="listitem" class="footer-cms-link w-dyn-item"><a href="/agadir.html" class="footer-text-link footer-cms customtrans thicker">Agadir</a></div>
                            <div role="listitem" class="footer-cms-link w-dyn-item"><a href="/casablanca.html" class="footer-text-link footer-cms customtrans thicker">Casablanca</a></div>
+                           <div role="listitem" class="footer-cms-link w-dyn-item"><a href="/taghazout.html" class="footer-text-link footer-cms customtrans thicker">Taghazout</a></div>
+                           <div role="listitem" class="footer-cms-link w-dyn-item"><a href="/imsouane.html" class="footer-text-link footer-cms customtrans thicker">Imsouane</a></div>
                         </div>
                      </div>
                   </div>
