--- a/public/taghazout.html
+++ b/public/taghazout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-wf-page="614810e19a1f288229c2d988" data-wf-site="614810e19a1f28d23fc2d904" data-wf-status="1" lang="fr">
+<html data-wf-page="614810e19a1f288229c2d988" data-wf-site="614810e19a1f28d23fc2d904" lang="fr">
    <head>
       <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -280,7 +280,7 @@
             </div>
          </div>
          <section class="section atf destination-atf">
-            <div class="intro-mask"><img src="/images/taghazout.webp" loading="lazy" alt="taghazout" srcset="/images/taghazout_500.webp 500w, /images/taghazout_800.webp 800w" class="intro-image"></div>
+            <div class="intro-mask"><img src="/images/taghazout1_1920.webp" loading="lazy" alt="taghazout" srcset="/images/taghazout1_640.webp 640w, /images/taghazout1_1280.webp 1280w" class="intro-image"></div>
             <div class="dark-gradient less-dark"></div>
             <header style="opacity:0" class="container destinations-atf limit-container mobile-no-padding">
                <div class="destination-block">
@@ -378,7 +378,7 @@
                         </div>
                         <div role="listitem" class="w-dyn-item">
                            <div style="opacity:0;display:none" class="center-following-photo">
-                              <div class="activities-tilted-photo"><img src="/images/taghazout.webp" loading="lazy" alt="plage d'essaouira" class="act-photo"></div>
+                              <div class="activities-tilted-photo"><img src="/images/taghazout.webp" loading="lazy" alt="taghazout" class="act-photo"></div>
                            </div>
                            <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0853" style="opacity:.7" class="activity-block">
                               <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0854" class="activity">
@@ -402,7 +402,7 @@
                         </div>
                         <div role="listitem" class="w-dyn-item">
                            <div style="opacity:0;display:none" class="center-following-photo">
-                              <div class="activities-tilted-photo"><img src="/images/taghazout.webp" loading="lazy" alt="plage d'essaouira" class="act-photo"></div>
+                              <div class="activities-tilted-photo"><img src="/images/taghazout.webp" loading="lazy" alt="taghazout" class="act-photo"></div>
                            </div>
                            <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0853" style="opacity:.7" class="activity-block">
                               <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0854" class="activity">
@@ -457,15 +457,7 @@
                         <th>Réservation</th>
                      </tr>
                      <tr>
-                        <td>Essaouira > Marrakech</td>
-                        <td>1 > 4 Pers</td>
-                        <td>60€</td>
-                        <td>5 > 8 Pers</td>
-                        <td>80€</td>
-                        <td><a href="/contact.html">Réservez votre taxi</a></td>
-                     </tr>
-                     <tr>
-                        <td>Essaouira > Agadir</td>
+                        <td>Essaouira > Taghazout</td>
                         <td>1 > 4 Pers</td>
                         <td>70€</td>
                         <td>5 > 8 Pers</td>
@@ -473,15 +465,7 @@
                         <td><a href="/contact.html">Réservez votre taxi</a></td>
                      </tr>
                      <tr>
-                        <td>Essaouira > Casablanca</td>
-                        <td>1 > 4 Pers</td>
-                        <td>150€</td>
-                        <td>5 > 8 Pers</td>
-                        <td>180€</td>
-                        <td><a href="/contact.html">Réservez votre taxi</a></td>
-                     </tr>
-                     <tr>
-                        <td>Essaouira > Taroudant</td>
+                        <td>Taghazout > Marrakech</td>
                         <td>1 > 4 Pers</td>
                         <td>130€</td>
                         <td>5 > 8 Pers</td>
@@ -489,19 +473,11 @@
                         <td><a href="/contact.html">Réservez votre taxi</a></td>
                      </tr>
                      <tr>
-                        <td>Essaouira > Walidia</td>
+                        <td>Marrakech > Taghazout</td>
                         <td>1 > 4 Pers</td>
                         <td>120€</td>
                         <td>5 > 8 Pers</td>
-                        <td>150€</td>
-                        <td><a href="/contact.html">Réservez votre taxi</a></td>
-                     </tr>
-                     <tr>
-                        <td>Essaouira > Aéroport</td>
-                        <td>1 > 4 Pers</td>
-                        <td>15€</td>
-                        <td>5 > 8 Pers</td>
-                        <td>30€</td>
+                        <td>130€</td>
                         <td><a href="/contact.html">Réservez votre taxi</a></td>
                      </tr>
                   </table>
@@ -542,6 +518,26 @@
                               </a>
                            </div>
                            <div role="listitem" class="trip-iten-item splide__slide w-dyn-item">
+                            <a href="/essaouira.html" class="travel-type-link consider-link customtrans w-inline-block">
+                               <img src="/images/essaouira.webp" loading="lazy" alt="essaouira" sizes="(max-width: 479px) 92vw, (max-width: 991px) 60vw, 49vw" srcset="/images/essaouira_500.webp 500w, /images/essaouira_800.webp 800w, /images/essaouira_1080.webp 1080w, /images/essaouira_1250 1250w" class="image pop-ti">
+                               <div class="dark-gradient"></div>
+                               <div class="title-name-block consider-block">
+                                  <div class="trip-days">Mogador</div>
+                                  <h4 class="h4 white">Essaouira</h4>
+                                  <div class="icon-wrap-block trip-iten">
+                                     <div class="icon-wrap mobile-no-right"><img src="/images/localisation.svg" loading="lazy" alt="icon" class="icon"></div>
+                                     <div class="category-text">Sud-ouest du maroc</div>
+                                  </div>
+                               </div>
+                               <div class="consider-bot-wrapper on-hover-block">
+                                  <p class="paragraph light consider-limit">Essaouira, joyau côtier du Maroc, séduit par son charme pittoresque et son atmosphère décontractée. Les remparts ocre entourant la médina préservée, classée au patrimoine mondial de l'UNESCO, abritent des ruelles sinueuses, des boutiques artisanales et des cafés animés.</p>
+                                  <div class="button-pill inside-consider">
+                                     <div class="button-text">En savoir plus</div>
+                                  </div>
+                               </div>
+                            </a>
+                         </div>
+                           <div role="listitem" class="trip-iten-item splide__slide w-dyn-item">
                               <a href="/casablanca.html" aria-current="page" class="travel-type-link consider-link customtrans w-inline-block w--current">
                                  <img src="/images/casablanca.webp" loading="lazy" alt="mosquée hassan 2" sizes="(max-width: 479px) 92vw, (max-width: 991px) 60vw, 49vw" srcset="/images/casablanca_500.webp 500w, /images/casablanca_800.webp 800w, /images/casablanca_1080.webp 1080w" class="image pop-ti">
                                  <div class="dark-gradient"></div>
@@ -581,6 +577,26 @@
                                  </div>
                               </a>
                            </div>
+                           <div role="listitem" class="trip-iten-item splide__slide w-dyn-item">
+                            <a href="/imsouane.html" class="travel-type-link consider-link customtrans w-inline-block">
+                               <img src="/images/imsouane.webp" loading="lazy" alt="Imsouane" sizes="(max-width: 479px) 92vw, (max-width: 991px) 60vw, 49vw" srcset="/images/imsouane-500.webp 500w, /images/imsouane-800.webp 800w, /images/imsouane-1080.webp 1080w, /images/imsouane-1250.webp 1250w, /images/imsouane-1450.webp 1450w, /images/imsouane-1600.webp 600w" class="image pop-ti">
+                               <div class="dark-gradient"></div>
+                               <div class="title-name-block consider-block">
+                                  <div class="trip-days">Imsouane Bay</div>
+                                  <h4 class="h4 white">Imsouane</h4>
+                                  <div class="icon-wrap-block trip-iten">
+                                     <div class="icon-wrap mobile-no-right"><img src="/images/localisation.svg" loading="lazy" alt="icon" class="icon"></div>
+                                     <div class="category-text">70 km au nord d'Agadir</div>
+                                  </div>
+                               </div>
+                               <div class="consider-bot-wrapper on-hover-block">
+                                  <p class="paragraph light consider-limit">À mi-chemin entre Agadir et Essaouira, Imsouane offre une ambiance décontractée, idéale pour se détendre, profiter de la nature et découvrir l'authenticité marocaine.</p>
+                                  <div class="button-pill inside-consider">
+                                     <div class="button-text">En savoir plus</div>
+                                  </div>
+                               </div>
+                            </a>
+                         </div>
                         </div>
                      </div>
                      <div class="slide-progress-bar">
@@ -611,6 +627,9 @@
                            <div role="listitem" class="footer-cms-link w-dyn-item"><a href="/essaouira.html" class="footer-text-link footer-cms customtrans thicker">Essaouira</a></div>
                            <div role="listitem" class="footer-cms-link w-dyn-item"><a href="/agadir.html" class="footer-text-link footer-cms customtrans thicker">Agadir</a></div>
                            <div role="listitem" class="footer-cms-link w-dyn-item"><a href="/casablanca.html" class="footer-text-link footer-cms customtrans thicker">Casablanca</a></div>
+                           <div role="listitem" class="footer-cms-link w-dyn-item"><a href="/taghazout.html" class="footer-text-link footer-cms customtrans thicker">Taghazout</a></div>
+                           <div role="listitem" class="footer-cms-link w-dyn-item"><a href="/imsouane.html" class="footer-text-link footer-cms customtrans thicker">Imsouane</a></div>
+
                         </div>
                      </div>
                   </div>
